...
        <variable
            name="viewModel"
            type="com.example.myapplication.ui.weather.current.CurrentWeatherViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_current_weather"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/card_bg">

        <ProgressBar
...
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:name="com.example.myapplication.ui.weather.current.CurrentWeatherFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
...
