...
        <variable
            name="viewModel"
            type="com.example.myapplication.ui.weather.forecast.ForecastWeatherViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_weather_forecast"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/card_bg">

        <ProgressBar
...
